--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ textarea { resize:vertical; }
 .bottom { margin-bottom:0px !important; }
 .first { margin-top:0px !important; }
 .ico-general { display:block; background:url('../img/ico-general.png') no-repeat; }
-.ttl-general { display:block; background:url('../img/ttl-general.png') no-repeat; }
+.ttl-general { display:block; background:url('../img/ttl-general.png') no-repeat; color:#FFF; }
 .LNG-en-us .ttl-general { display:block; background:url('../img/ttl-general-EN.png') no-repeat; }
 .hide { display:none; }
 .show { display:block; }
@@ -126,6 +126,8 @@ textarea { resize:vertical; }
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+a { color:#FFF; }
 
 body { background-color:#201C1D; }
 
@@ -473,18 +475,18 @@ main .where { display:inline-block; width:432px; font-size:28px; font-weight:bol
 #schedule table caption { margin-bottom:38px; font-family:"Arial Black", Gadget, sans-serif; font-size:40px; font-weight:900; text-align:left; line-height:100%; color:rgb(225,43,38); text-shadow:0px 3px 0px rgb(0,0,0); }
 #schedule table caption .weekday { display:block; font-family:"Arial Black", Gadget, sans-serif; font-size:20px; font-weight:900; line-height:120%; color:rgb(32,28,29); text-align:left; text-shadow:-2px -2px 0 rgb(225,43,38), 2px -2px 0 rgb(225,43,38), -2px 2px 0 rgb(225,43,38), 2px 2px 0 rgb(225,43,38); }
 #schedule table tbody { vertical-align:top; }
-#schedule table tbody td.hour { font-size:16px; color:rgb(174,174,174) !important; }
+#schedule table tbody tr.event td.speaker { font-style:italic; }
+#schedule table tbody td.hour { font-size:16px; color:#ffffff !important; }
 #schedule table tbody tr { padding:10px; border-top:1px solid #000; border-bottom:1px solid #000 }
 #schedule table tbody tr.event { background:url('../img/bg-table.png') repeat-x; }
 #schedule table tbody tr.event td { font-size:16px; color:rgb(174,174,174); }
-#schedule table tbody tr.event td.speaker { font-style:italic; }
 #schedule table tbody td { padding:15px 0 15px 15px; }
 #schedule table tbody td.speaker { padding:15px 0 0 30px; }
 #schedule table tbody td .info-wrapper { margin-bottom:20px; float:left; width:300px; }
 #schedule table tbody td .name { font-size:16px; color:rgb(248,204,95); text-transform:uppercase; }
 #schedule table tbody td .speak { display:block; color:rgb(173,173,173); font-weight:bold; }
-#schedule table tbody td .speak:hover,
-#schedule table tbody td .speak:focus { opacity:.7; } 
+#schedule table tbody td a.speak:hover,
+#schedule table tbody td a.speak:focus { opacity:.7; } 
 #schedule table tbody td .expand { float:right; width:20px; height:20px; background-position:0 -242px; cursor:pointer; transition:all 1s ease; color:transparent; }
 #schedule table tbody td .expand:hover,
 #schedule table tbody td .expand:focus { opacity:.7; }
