--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,21 +6,33 @@
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
 	.ticket-button{
-		margin-bottom: 40px;
+		max-width: 55% !important;
+	}
+	.eric{
+		float: right !important;
 	}
 }
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
+	body{
+		padding:20px !important;
+	}
 	.ticket-button div{
-		font-size: 28px;
+		font-size: 28px !important;
 	}
 	.ticket-button span{
-		font-size: 18px;
-  		line-height: inherit;
+		font-size: 18px !important;
+  		line-height: inherit !important;
 	}
 	.ticket{
-		margin-bottom: 30px;
+		margin-bottom: 30px !important;
+	}
+	.speaker, .legend-speaker{
+		margin-top: 25px !important;
+	}
+	.ticket-button{
+		max-width: 64% !important;
 	}
 }
  
@@ -33,16 +45,25 @@
 		width: 86%;
 	}
 	.ticket{
-		margin-bottom: 30px;
+		margin-bottom: 30px !important;
 	}
 	.ticket-button{
-		max-width: 84% !important;
+		max-width: 92% !important;
 	}
 	.ticket-button div{
-		font-size: 20px;
+		font-size: 18px !important;
 	}
-	.ticket-button span{
-		  font-size: 14px;
-  		  line-height: 0
+	.ticket span{
+		  font-size: 13px !important;
+  		  line-height: 0 !important;
+	}
+	.slogan{
+		margin-top: 20px !important;
+	}
+	.speaker, .legend-speaker{
+		margin-top: 25px !important;
+	}
+	.block{
+		height: auto !important;
 	}
 }
