Fixed my personal website address

--- a/2011/views/quemsomos.html
+++ b/2011/views/quemsomos.html
@@ -10,9 +10,9 @@
   </div>
   
   <div class="quemsomos">
-    <a href="http://felipenmoura.org/pt"> <img src="images/felipe.jpg" /> </a><br />
+    <a href="http://felipenmoura.com/"> <img src="images/felipe.jpg" /> </a><br />
     <span>Felipe Nascimento de Moura</span><br>
-    <a href="http://felipenmoura.org/pt"><small>http://felipenmoura.org/pt</small></a>
+    <a href="http://felipenmoura.com/"><small>http://felipenmoura.com/</small></a>
     <div style="clear: both"></div>
     <small>Felipe Nascimento de Moura é graduado técnico em TI e gerência de projetos. Especialista em Ajax, DHTML e PHP.
 Realmente gosta de trabalhar com JavaScript e PHP, normalmente com PostgreSQL, outra tecnologia que pratica bastante.
